[package]
edition = "2021"
name = "workflow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
futures = "0.3.5"
log = "0.4.11"
reqwest = {version = "0.11.1", features = ["json", "multipart"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_derive = "1.0.116"
serde_json = "1.0.78"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
wasm-bindgen = "0.2.83"
